<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/taxET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="81dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/foodET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/foodLBL"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/tipET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/totalET"
        android:layout_below="@+id/tipPercentageRG"
        android:layout_marginTop="99dp"
        android:clickable="false"
        android:duplicateParentState="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="numberDecimal"
        android:longClickable="false" />

    <EditText
        android:id="@+id/totalET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tipET"
        android:layout_marginTop="30dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="numberDecimal"
        android:longClickable="false" />

    <TextView
        android:id="@+id/taxLBL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tipPercentageRG"
        android:layout_alignParentLeft="true"
        android:text="@string/taxLBL" />

    <TextView
        android:id="@+id/foodLBL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/taxLBL"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="49dp"
        android:text="@string/foodLBL" />

    <RadioGroup
        android:id="@+id/tipPercentageRG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/taxET"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/tip0RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/tip1LBL" />

        <RadioButton
            android:id="@+id/tip1RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip2LBL" />

        <RadioButton
            android:id="@+id/tip2RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip3LBL" />
    </RadioGroup>

    <Button
        android:id="@+id/calcBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tipPercentageRG"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="36dp"
        android:layout_toRightOf="@+id/taxLBL"
        android:text="@string/calcLBL" />

    <TextView
        android:id="@+id/tipLBL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tipET"
        android:layout_alignBottom="@+id/tipET"
        android:layout_alignRight="@+id/foodLBL"
        android:text="@string/tipLBL" />

    <TextView
        android:id="@+id/totalLBL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/totalET"
        android:layout_toLeftOf="@+id/tipPercentageRG"
        android:text="@string/totalLBL" />

    <TextView
        android:id="@+id/tipbtnLBL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/taxET"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/tipbtnLBL" />

</RelativeLayout>